# waste_management

./: Makefile  README.md  environment.yml  environment_tf.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.1-bf-dataset-split-1.ipynb  0.1-bf-initial-data-exploration-0.ipynb
waste_management/: __init__.py  dataset.py  features.py  plots.py
waste_management/modeling/: predict.py  train.py
